--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha01"
 
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
